--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
     <!-- <link rel="stylesheet" href="https://use.typekit.net/mli7qnv.css" /> -->
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
