--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <meta content="https://climate.red/opengraph.png" property="og:image" />
     <meta content="https://climate.red/" property="og:url" />
     <meta content="summary" name="twitter:card" />
+    <meta content="@ifrc" name="twitter:site" />
     <meta
       content="Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join."
       property="og:description"
