fix: set theme-color

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,8 @@
     <meta content="https://climate.red/opengraph.png" property="og:image" />
     <meta content="https://climate.red/" property="og:url" />
     <meta content="summary" name="twitter:card" />
-    <meta content="@ifrc" name="twitter:site" />
+    <meta name="twitter:site" content="@ifrc" />
+    <meta name="theme-color" content="ef3340" />
     <meta
       content="Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join."
       property="og:description"
