fix: update index.html copy

--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
-    <!-- <link rel="stylesheet" href="https://use.typekit.net/mli7qnv.css" /> -->
-    <!-- <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script> -->
-    <title>Climate:Red | Virtual Climate Summit 2020</title>
+    <title>Planet:Red | Virtual Climate Summit 2021</title>
     <meta
-      content="Climate:Red | Virtual Climate Summit 2020"
+      content="Planet:Red | Virtual Climate Summit 2021"
       property="og:title"
     />
     <meta content="website" property="og:type" />
-    <meta content="https://climate.red/opengraph.png" property="og:image" />
-    <meta content="https://climate.red/" property="og:url" />
+    <meta content="https://planetredsummit/opengraph.png" property="og:image" />
+    <meta content="https://planetredsummit/" property="og:url" />
     <meta content="summary" name="twitter:card" />
     <meta name="twitter:site" content="@ifrc" />
     <meta name="theme-color" content="ef3340" />
     <meta
-      content="Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Climate:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join."
+      content="Climate change affects everyone, everywhere - therefore no person, country or time zone is excluded from the virtual Planet:Red Summit, organised by the network of the International Federation of Red Cross and Red Crescent and open for everyone to join."
       property="og:description"
     />
     <!-- Load configuration script -->
